# kata-starters

./: .gitignore  README.md
.ionide/: symbolCache.db
.lsp/.cache/: db.transit.json
__template__/: README.md
clojure/: .gitignore  README.md  deps.edn  tests.edn
clojure/src/: kata.clj
clojure/test/: kata_test.clj
csharp/: README.md  template.sln
csharp/src/: Calc.cs  Program.cs
csharp/test/: UnitTest1.cs  test.csproj
dart/: README.md
dart/lib/: dart.dart
dart/test/: dart_test.dart
fsharp/: FSharpSample.sln  README.md
fsharp/src/App/: App.fsproj  Program.fs
fsharp/test/: UnitTest1.fs  test.fsproj
haskell/: README.md  haskell.cabal
haskell/src/: Core.hs
haskell/test/: CoreSpec.hs  Spec.hs
java/: README.md  build.gradle.kts
java/src/main/java/kata/: Kata.java
java/src/test/java/kata/: KataTest.java
javascript/node-with-jest/: README.md  package-lock.json  package.json
javascript/node-with-jest/src/: index.js
javascript/node-with-jest/test/: spec.js
kotlin/: README.md  build.gradle.kts  settings.gradle.kts
kotlin/src/main/kotlin/: Kata.kt
kotlin/src/test/kotlin/: KataTest.kt
python/: README.md
python/kata/: __init__.py  kata.py
python/tests/: context.py  test_kata.py
rust/: README.md
rust/src/: lib.rs
scala/: .gitignore  README.md  build.sbt  stringCalculator.md
scala/project/: Dependencies.scala
scala/src/main/scala/kata/: Calculator.scala  Core.scala
typescript/: README.md  jest.config.js  package-lock.json  package.json  tsconfig.json
typescript/src/: main.ts
typescript/test/: main.test.ts
(+2 files in other folders)
