cabal-version:      2.4
name:               kata
version:            0.1.0.0

library
    default-language: Haskell2010
    hs-source-dirs:   src
    exposed-modules:  Core
    build-depends:    base ^>=4.14.3.0

test-suite kata-test
    default-language: Haskell2010
    hs-source-dirs: test
    type: exitcode-stdio-1.0
    main-is: Spec.hs
    build-depends:
        base ^>=4.14.3.0,
        kata,
        hspec ^>=2.9.4,
        QuickCheck ^>=2.14.2
    other-modules:
        CoreSpec